--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <groupId>org.apache.crail</groupId>
   <artifactId>crail-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.3-incubating-SNAPSHOT</version>
+  <version>1.3-daniel</version>
   <name>Crail Project Parent POM</name>
   <url>http://maven.apache.org</url>
 
