--- a/docker/crail-site.conf
+++ b/docker/crail-site.conf
@@ -4,4 +4,4 @@ crail.cachelimit                  $CACHELIMIT
 crail.storage.tcp.interface       $INTERFACE
 crail.storage.tcp.datapath        $DATAPATH
 crail.storage.tcp.storagelimit    $STORAGELIMIT
-
+crail.storage.types               org.apache.crail.storage.active.ActiveStorageTier,org.apache.crail.storage.tcp.TcpStorageTier
