--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -155,8 +155,9 @@
         </executions>
       </plugin>
      <plugin>
-        <groupId>net.ju-n.maven.plugins</groupId>
-        <artifactId>checksum-maven-plugin</artifactId>
+       <groupId>net.ju-n.maven.plugins</groupId>
+       <artifactId>checksum-maven-plugin</artifactId>
+       <version>1.4</version>
         <executions>
           <execution>
             <goals>
