allow storage port config in docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -55,6 +55,7 @@ ENV NAMENODE_PORT=9060
 ENV INTERFACE=eth0
 ENV DATAPATH=/dev/hugepages/data
 ENV STORAGELIMIT=1073741824
+ENV STORAGEPORT=50020
 ENV CACHEPATH=/dev/hugepages/cache
 ENV CACHELIMIT=0
 
