--- a/docker/crail-site.conf
+++ b/docker/crail-site.conf
@@ -6,3 +6,5 @@ crail.storage.tcp.datapath        $DATAPATH
 crail.storage.tcp.storagelimit    $STORAGELIMIT
 crail.storage.tcp.port            $STORAGEPORT
 crail.storage.types               org.apache.crail.storage.active.ActiveStorageTier,org.apache.crail.storage.tcp.TcpStorageTier
+crail.storage.active.cores        5
+crail.singleton                   false
