--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.crail</groupId>
     <artifactId>crail-parent</artifactId>
-    <version>1.3-daniel</version>
+    <version>1.3-glider</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
