--- a/hdfs/pom.xml
+++ b/hdfs/pom.xml
@@ -21,14 +21,14 @@
   <parent>
     <groupId>org.apache.crail</groupId>
     <artifactId>crail-parent</artifactId>
-    <version>1.3-daniel</version>
+    <version>1.3-glider</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <groupId>org.apache.crail</groupId>
   <artifactId>crail-hdfs</artifactId>
   <packaging>jar</packaging>
-  <version>1.3-daniel</version>
+  <version>1.3-glider</version>
   <name>Crail HDFS Project</name>
   <url>http://maven.apache.org</url>
 
