--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <groupId>org.apache.crail</groupId>
   <artifactId>crail-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.3-daniel</version>
+  <version>1.3-glider</version>
   <name>Crail Project Parent POM</name>
   <url>http://maven.apache.org</url>
 
@@ -84,7 +84,7 @@
         <groupId>com.ibm.narpc</groupId>
         <artifactId>narpc</artifactId>
         <version>1.5</version>
-			</dependency>
+      </dependency>
       <dependency>
         <groupId>com.ibm.jnvmf</groupId>
         <artifactId>jnvmf</artifactId>
