--- a/storage-active/pom.xml
+++ b/storage-active/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.apache.crail</groupId>
         <artifactId>crail-parent</artifactId>
-        <version>1.3-daniel</version>
+        <version>1.3-glider</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>crail-storage-active</artifactId>
-    <version>1.3-daniel</version>
+    <version>1.3-glider</version>
     <name>Crail Storage Active Project</name>
 
     <dependencies>
